--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>React Project</title>
-        <link rel="stylesheet" type="text/css" href="/src/css/index.css">
 	</head>
 	<body>
-        <!-- <div id="root"></div> -->
-        <div><p>Hello world!</p></div>
-        <div><img src="/src/img/test.jpeg" alt=""></div>
+        <div id="root"></div>
 	</body>
 </html>
